# data_prep_for_sft

./: .gitignore  PLAN.md  README.md  pull_data_from_hf.py  push_data_to_hf.py  pyproject.toml
notebooks/: test.ipynb
src/: config.py  generator.py  main.py  matcher.py  model_selector.py  prompt_builder.py  utils.py
